<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Tarefa2_a14juanms"
    android:orientation="vertical">




     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">

       <EditText
           android:id="@+id/edittext_principal"
           android:hint="@string/text_hint"
           android:background="@color/green"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="@dimen/letra_grande"
           android:inputType="textCapWords"
           />

         <CheckBox
             android:id="@+id/box_casilla"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/text_clear"
             android:layout_gravity="left"/>
         <Button
             android:onClick="engadirTexto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/text_button"/>

         <TextView
             android:id="@+id/visor_texto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/text_label"
             android:textColor="@color/red"
             android:textSize="@dimen/letra_pequena"/>



             <RadioGroup
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
               <RadioButton
                   android:onClick="cambiarColor"
                   android:id="@+id/rojo"
                   android:layout_width="@dimen/ancho_cero"
                   android:layout_height="wrap_content"
                   android:checked="true"
                   android:text="@string/text_red"
                   android:layout_weight="1"/>

                <RadioButton
                    android:onClick="cambiarColor"
                    android:id="@+id/azul"
                    android:layout_width="@dimen/ancho_cero"
                    android:layout_height="wrap_content"
                    android:text="@string/text_blue"
                    android:layout_weight="1"
                    />
             </RadioGroup>



         <View
             android:layout_width="fill_parent"
             android:layout_height="@dimen/raya"
             android:background="@color/black" />

         <Spinner
             android:id="@+id/desplegable"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:entries="@array/provincias">

         </Spinner>


         <View
             android:layout_width="fill_parent"
             android:layout_height="@dimen/raya"
             android:background="@color/black" />
         <ImageView
             android:id="@+id/foto"
             android:onClick="msgFoto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@mipmap/horreo"
             android:scaleType="center"
             android:tag="@string/text_image"
             />

         <View
             android:layout_width="fill_parent"
             android:layout_height="@dimen/raya"
             android:background="@color/black" />

     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center|bottom"
         android:orientation="vertical">

         <Chronometer
             android:id="@+id/crono"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"

             android:textSize="@dimen/letra_grande"/>
         <Switch
             android:onClick="startCrono"
             android:id="@+id/suich"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:showText="true"
             android:textOff="@string/text_stop"
             android:textOn="@string/text_start"/>
     </LinearLayout>



</LinearLayout>
